fixed overflow

--- a/style.css
+++ b/style.css
@@ -193,6 +193,9 @@ footer {
 /*media queries-----------------*/
 
 @media (max-width: 768px) {
+	body {
+	overflow-x: hidden;
+	}
 	.landing-text h1 {
 		font-size: 450%;
 	}
@@ -234,6 +237,9 @@ footer {
 }
 
 @media (min-width: 769px) and (max-width: 1024px){
+	body {
+	overflow-x: hidden;
+	}
 
 	.navbar-brand img {
 	height: 55px;
@@ -262,6 +268,9 @@ footer {
 }
 
 @media (max-width: 460px) {
+	body {
+	overflow-x: hidden;
+}
 	.fa {
 		font-size: 20px;
 		padding: 0 5px;
